--- a/src/client/public/admin.html
+++ b/src/client/public/admin.html
@@ -24,7 +24,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="preload" href="/rubik.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/SpaceMono-regular.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="stylesheet" type="text/css" href="/index.css?v={buildId}" />
     <script>
       window.PARTICLES_PATH = '{particlesPath}'
